--- a/vignettes/sensemakr.Rmd
+++ b/vignettes/sensemakr.Rmd
@@ -54,7 +54,7 @@ data("darfur")
 The latest version of `sensemakr` can be installed by:
 
 ```{r}
-# devtools::install_github("chadhazlett/sensemakr")
+#devtools::install_github("chadhazlett/sensemakr", build_vignettes = TRUE)
 # setwd("~/projects/sensemakr_fin/sensemakr/")
 # devtools::build_vignettes() 
 ```
@@ -149,6 +149,13 @@ plot(sense.out, showvars = list("pastvoted","female"), contour="t-value")
 
 For this plot, the contour line that is emphasized is at $t=1.96$ rather than zero: we are interested in where an estimate would become statistically indistinguishable from zero. Because the standard errors change as the hypothesized confounder changes, this requires more than computing a critical value from the original analysis and seeing when an adjusted estimate falls below it.
 
+
+An alternative way of incorporating information about how a hypothesized confounder revises the standard error is to focus on the upper- or lower-limits of a 95\% confidence interval around the point estimate. Both can be called as follows, which also show how the `lim` argument can be used to control the maximum $R^2$ used in the plots,
+
+```{r}
+plot(sense.out, showvars = list("pastvoted","female"), contour="upper bound", lim=.35)
+plot(sense.out, showvars = list("pastvoted","female"), contour="lower bound", lim=.35)
+```
 ### Worst-case plots
 
 The second main plot type is the worst-case plot:
@@ -158,6 +165,7 @@ plot(sense.out, type="worst-case")
 Here the dashed lines show different scenarios. The most severe is the solid line, for which the entire residual from the model is hypohtesized to be a confounder (partial $R^2_Y=1$). One can then follow this line to see where it cross a designated value of the adjusted estimate, such as $0$, which we mark for convenience.  The point at which the line crosses zero correspondons to approximately 0.02 on the horizontal axis. This indicated that an unobserved confounder with partial $R^2_Y=1$, i.e. the entire residual, would need only have a partial $R^2_D$ of about 2\% in order to change the sign of the effect estimate. 
 
 The tick marks on the horizontal axis show benchmarks -- the partial $R^2_D$ values of observed covariates, for comparison. In this case, we are fortunate that even assuming a confounder with $R^2_Y=1$, though it's $R^2_D$ would need to be only 2\% to eliminate the effect, that is approximately twice the $R^2_D$ of any observable.  Given the research design, we know that the treatment actually consists of injuries that occured during indiscriminate violence. As argued in XXX, the nature of the violence makes it difficult to imagine unoberved confounders predict the assignment of violence more strongly than observables such as  `female`.  This suggests that the result is fairly robust. 
+
 A more conservative analysis would not assume a confounder with partial $R^2_Y=1$, but perhaps 30\%, or perhaps the same $R^2_Y$ as observed for the covariate most strongly predictive of the outcome (51\% in this case, also shown as a line.)  By worst-case plot will always show a line corresponding to the largest observed $R^2_Y$ (51\% in this case).  The remaining lines are determined by the option `scenarios`, which defaults to 100\% and 30\% (i.e. `scenarios=c(1,.3)`) as shown here.
 
 ## Directly accessing results
@@ -191,408 +199,26 @@ sense.out$benchmarks$benchmark_group
 ```
 
 
-QUESTION: is it important that showvars accepts a list? Standard usage would seem to be `c()`. I guess its because we are overloading it by also making "masked" and "all" options?
+## User Specified Groups as Benchmarks
 
-QUESTION: should we rename `lower bound` to `lower limit` or `lower CI` or something? "bound" is too strong.
+In the above examples, the only variables grouped together were the village indicators which derived from a single factor variable and were thus grouped by default.  In other cases, users may wish to group variables together manually.  The sensitivity parameters associated with such a group imply a level of bias associated with that group of variables.  This level of bias is actually an over-estimate of the bias the would be caused by leaving out these variables themselves, but it is the bias that would be caused if an unobseved confounder has the same partial $R^2$ values as this collective group.
 
-# Advanced Usage
-
-Then go through some more customizeable stuff.  
-
-
-<!--
-The benchmarks  
-
-QUESTION: Are there cases where we'd want to use a covariate as a benchmark but not have it in the model? Maybe a variable that we worry is post-tx?
-
-# runs benchmarking etc
-sense <- sensemakr(model=model, treatment="directlyharmed", benchmarks=X)
-
-## contour plot
-plot1_data <- plot(sense)
-plot(sense, lim=.2)
-plot2_data <- plot(sense, contour = "t-value")
-plot3_data <- plot(sense, contour = "lower bound")
-plot4_data <- plot(sense, contour = "upper bound")
-
-## worst-case plot
-plot5_data <- plot(sense, type = "worst-case")
-# note, let's me the benchmark ticks at the bottom much more visible
-# and let's reduce number of lines that show and/or label them better.
-
-# testing verbal outputs
-interpret(sense)
-interpret(sense, q = 0.5) #throws warning
-interpret(sense, q = 0.6) #throws warning.
-
-summary(sense) #needs more output/ to be different from interpret().
-
-
-
-
-We will show 3 examples using the darfur data. The examples sequentially expose increasing amounts of customization that a user can run for their sensitivity analysis. We will provide examples of continuous benchmarks, categorical benchmarks, and user supplied benchmark groups.
-
-
-# Continuous Benchmarks
-
-## Fit
-
-In the outcome model, there are two continuous (or at least ordered) covariates, `age` and `hhsize_darfur`.
+Custom groupings can be constructed by specifying them during the `sensemakr()` call using the optional `group_list` argument, which expects a list of character vectors. For example, two different livelihood indicators, `farmer_dar`, and `herder_dar` can be grouped together:
 
 ```{r}
-model_cntns = lm(data = darfur,
-                 peacefactor ~ directlyharmed +
-                   age + hhsize_darfur)
-
+sense.grp.out= sensemakr(lm.out, treatment="directlyharmed", group_list = list(c("farmer_dar","herder_dar")))
 ```
 
-## Compute
+The resulting group variables will be named as the first variable name followed by the second variable name with a comma in between, i.e. `farmer_dar,herder_dar`.  We can see the resulting benchmarks for this grouped variable (and `village`, which remains grouped) as in,
 
 ```{r}
-sense_cntns = sensemakr(model=model_cntns,
-                        treatment="directlyharmed")
-
-str(sense_cntns$benchmarks,max.level = 1)
-
-class(sense_cntns)
-
+sense.grp.out$benchmarks$benchmark_group
+plot(sense.grp.out, showvars=list("farmer_dar,herder_dar", "female"))
 ```
 
-## Plot
-```{r}
-plot(sense_cntns,lim=0.02)
-```
+# REMAINING QUESTIONS FOR US
+QUESTION: is it important that showvars accepts a list? Standard usage would seem to be `c()`. I guess its because we are overloading it by also making "masked" and "all" options? XXX
 
-### Show specific benchmark points from an explicit list
+QUESTION: should we rename `lower bound` to `lower limit` or `lower CI` or something? "bound" is too strong. XXX
 
-
-
-```{r}
-plot(sense_cntns,showvars=list('age','hhsize_darfur'),lim=0.02)
-plot(sense_cntns,showvars=list('age'),lim=0.02)
-```
-
-# Factor Benchmarks
-
-In the outcome model, there are two continuous covariates, `age` and `hhsize_darfur`. Further, there are two categorical covariates, `female` and `village`.
-
-## Fit
-
-```{r}
-
-model_fctr  = lm(data = darfur,
-                 peacefactor ~ directlyharmed + 
-                   age + hhsize_darfur +
-                   female + village)
-
-```
-
-## Compute
-
-
-```{r}
-
-
-sense_fctr = sensemakr(model=model_fctr,
-                       treatment="directlyharmed")
-
-
-```
-
-notice there is a single observation in the `$benchmark_group` item of the `sensemakr` object
-
-```{r}
-str(sense_fctr$benchmarks,max.level = 1)
-
-sense_fctr$benchmarks$benchmark_group
-
-row.names(sense_fctr$benchmarks$benchmark_group)
-
-```
-
-Village enters the linear model as a R-side ‘factor’ variable with 480 levels. These 480 levels are dummy variable columns of the design matrix. Numerically, each level is treated as a set of binary covariates (fixed effects), and so the sensemakr() call treats each of the 480 levels of the village factor as a stand alone dummy variable which results in 480 benchmark points.
-
-These 'low-level' quantities are stored in the `$benchmarks$benchmark_eachvar` item of the `sensemakr` object
-
-```{r}
-
-str(sense_fctr$benchmarks$benchmark_eachvar)
-
-
-```
-
-Although we have 480 dummy variable sensitivity estimates for the village factor levels, we would like to understand the sensitivity when benchamrked to the entire single factor variable as a group
-
-notice that we have also grouped all 480 levels into the single `village` term stored in `str(sense_fctr$benchmarks$benchmark_group)`
-
-```{r}
-
-str(sense_fctr$benchmarks$benchmark_group)
-
-```
-We have also masked out the 480 levels from `str(sense_fctr$benchmarks$benchmark_masked)`
-
-```{r}
-str(sense_fctr$benchmarks$benchmark_masked)
-
-```
-
-## Plot
-
-Show all low level (design matrix) benchmark points
-
-
-```{r}
-
-plot(sense_fctr,showvars='all',lim=0.02)
-
-
-```
-
-Above, we immediately see the reason why using many dummy variables (for a single factor) can pose a challenge for interpretation, visually and contextually.
-
-Contextually, binary contrast columns (for each level) should be viewed as a single grouped ‘village’ factor. Visually, we only want to plot the single `village` factor and mask out its associated 480 individual levels.
-
-Therefore, we have designated `showvars='masked'` as the default option in `plot(...,showvars='masked')`
-
-```{r}
-
-# plot(sense_fctr,showvars='masked',lim=0.02)
-# same as
-
-plot(sense_fctr,lim=0.5)
-
-```
-
-### Show specific benchmark points from an explicit list
-
-Show the three benchmarks:
-
-* the `village` factor group
-* the `villageMngao` level of the village factor
-* the continuous covariate `age`
-
-
-
-```{r}
-
-par(mfrow=c(2,2))
-
-plot(sense_fctr,showvars=list('village','villageMngao','age'),lim=0.5)
-
-
-plot(sense_fctr,showvars=list('village','villageMngao','age'),lim=0.02)
-
-
-```
-
-
-# User Specified Groups as Benchmarks
-
-In the outcome model, there are two continuous covariates, `age` and `hhsize_darfur`. Further, there are two categorical covariates, `female` and `village`. Lastly, we note that the user specified group will not be supplied here in the `lm()` step, but after in the following `sensemakr()` step.
-
-## Fit
-
-```{r}
-model_cust_grp  = lm(data = darfur,
-                     peacefactor ~ directlyharmed + 
-                       age + hhsize_darfur +
-                       female + village
-                     )
-
-```
-
-Notice for this example, we are using the same resulting model fit that was used in the previous example
-
-```{r}
-identical(model_cust_grp,model_fctr)
-
-```
-
-## Compute
-
-Although the model fit step was similar, if the user wishes to compute sensitvitiy quantities for a custom grouping, the grouping must be specified during the `sensemakr()` call using the optional `group_list` argument. As in `sensemakr(...,group_list = list(c('village','female'),'age'))`.
-
-The example `group_list = list(c('village','female'),'age')` has two groups
-
-1) `village` with `female`
-2) `age` by itself
-
-The `group_list` argument expects a list of character vectors. The terms in a character vector comprise a single group. 
-
-
-```{r}
-
-sense_cust_grp = sensemakr(model=model_cust_grp,
-                           treatment="directlyharmed",
-                           group_list = list(c('village','female'),'age')
-                           )
-
-str(sense_cust_grp$benchmarks,max.level = 1)
-```
-
-The sensitivity quantities are stored in the `$benchmarks$benchmark_group` item of the `sensemakr` object
-
-```{r}
-names(sense_cust_grp$benchmarks)
-
-head(sense_cust_grp$benchmarks$benchmark_masked)
-head(sense_cust_grp$benchmarks$benchmark_group)
-```
-
-
-
-
-Terms, eligible for grouping, must be the same terms present in the initial outcome regression model stored in the `lm` object.
-
-```{r}
-class(model_cust_grp)
-
-colnames(attr(terms(formula(model_cust_grp)),'factor'))
-
-```
-
-
-
-
-## Plot
-
-### Plot with showvars=‘all’
-
-```{r}
-plot(sense_cust_grp,showvars='all',lim=0.5)
-```
-
-
-### Plot with showvars=‘masked’
-
-```{r}
-plot(sense_cust_grp)
-```
-
-From the plot (with default showvars='masked'), notice that:
-
-* ‘village,female’ is plotted 
-* ‘female’ is not plotted, 
-* ‘village’ (group) is plotted, 
-* the 480 factor levels of ‘village’ are not plotted
-* 'age' is plotted as cyan
-
-#### Explaining showvars='masked' vs showvars='all'
-
-Depending on the showvars option, the plot methods `plot(...,showvars='masked')` (default) or `plot(...,showvars='all')` will only display two sets of points, 
-
-1) `benchmark_group` (displayed in both showvars options) 
-and
-2) either of `benchmark_eachvar` or `benchmark_masked`
-
-The terms in `benchmark_eachvar` are plotted if `plot(...,showvars='all')`
-The terms in `benchmark_masked` are plotted if `plot(...,showvars='masked')`. 
-
-All sensitivity quantities, related to the columns of the linear model's model matrix, are stored in `benchmark_eachvar`. All terms in `benchmark_eachvar` get plotted if `plot(...,showvars='all')`.
-
-The terms in `benchmark_group` contain any factor variables (the levels of a factor variable grouped together) and any groups specified by the user in the `group_list` argument of `sensemakr()`.
-
-The terms in `benchmark_masked` form a subset of `benchmark_eachvar`. If a term is in `benchmark_eachvar` that is also part of a term in `benchmark_group`, then it does **not** get copied into `benchmark_masked`.
-If a term is in `benchmark_group`, it is not eligible to be copied into `benchmark_masked`. That is, `benchmark_masked` is the set complement of `benchmark_eachvar` anti-joined against `benchmark_group`. 
-
-For example, 
-
-1) The `female` term is stored in `benchmark_eachvar` and is also part of the `c("village","female")` group. Therefore `female` is **not** stored in `benchmark_masked` and is not displayed in the default `plot(...,showvars='masked')`.
-
-2) The factor levels of `village` are not stored in `benchmark_masked` since they are in `benchmark_eachvar` but also part of the group `village`. Therefore the factor levels of village are not displayed in the default `plot(...,showvars='masked')`. 
-
-3) The `village` term itself is a standalone group comprised of 480 levels hence present in `benchmarks_group`. In the examples before, we showed that the internals of `sensemakr()` enforced factor levels to be treated as a group. Therefore the single group term `village` is displayed as cyan in both `showvars='masked'` and `showvars='all'` options. 
-
-4) The single term `age` is part of the second user specified group in `group_list = list(c('village','female'),'age')` . Therefore the single group term `age` is displayed as cyan in both `showvars='masked'` and `showvars='all'` options. 
-
-
-There may be a situation where the user wants to plot `village,female` (a user specified group) but not plot `village` (a sensemakr-enforced group). More generally, If the user wishes to **not** plot specific terms in `benchmark_group` they must do it explicily themselves via the third showvars option, `plot(...,showvars=list())`.
-
-
-### Plot with specific list items via showvars=list()
-
-When choosing explicit groups to plot with the `showvars` argument of `plot()`, you must supply a `list()` whose entries are single character vectors that represent the specific groups you wish to plot. A single string must concatenate all the terms belonging to a single group (seperated by a spaceless comma).
-
-For example, the plot command `plot(...,showvars=list(‘village,female’))` corresponds with the compute command `sensemakr(...,group_list = list(c('village','female')))`
-
-As a result, only the single grouping `village` with `female` is plotted. Notice how `village,female` is plotted but **not** `village`.
-
-
-```{r}
-
-plot(sense_cust_grp,showvars=list('village,female'),lim=0.5)
-
-```
-
-
-
-
-
-# Other Helpful Plots
-
-## Other Contours
-
-with default showvars=‘masked’
-
-```{r}
-
-par(mfrow=c(2,2))
-
-plot(sense_cust_grp, lim=.2)
-plot(sense_cust_grp, contour = "t-value")
-plot(sense_cust_grp, contour = "lower bound")
-plot(sense_cust_grp, contour = "upper bound")
-
-```
-
-with showvars=‘all’
-
-```{r}
-
-par(mfrow=c(2,2))
-
-plot(sense_cust_grp, contour = "t-value",showvars='all')
-plot(sense_cust_grp, contour = "t-value",showvars='all',lim=0.02)
-plot(sense_cust_grp, contour = "lower bound",showvars='all',lim=0.02)
-plot(sense_cust_grp, contour = "upper bound",showvars='all',lim=0.02)
-
-```
-
-
-with showvars explicit
-
-
-```{r}
-
-par(mfrow=c(2,2))
-
-plot(sense_cust_grp, contour = "t-value",
-     showvars=list('village','villageMngao','age'))
-
-plot(sense_cust_grp, contour = "lower bound",
-     showvars=list('village','villageMngao','age'))
-
-plot(sense_cust_grp, contour = "upper bound",
-     showvars=list('village','villageMngao','age'))
-```
-
-
-## Worst Case Plot
-
-```{r}
-
-par(mfrow=c(2,2))
-
-plot(sense_cust_grp, type = "worst-case")
-
-plot(sense_cust_grp, type = "worst-case",showvars='masked',lim=0.5)
-
-plot(sense_cust_grp, type = "worst-case",showvars='all',lim=0.5)
-
-plot(sense_cust_grp, type = "worst-case",lim=0.5,
-     showvars=list('village','villageMngao','age'))
-
-```
-
--->
+QUESTION: Are there cases where we'd want to use a covariate as a benchmark but not have it in the model? Maybe a variable that we worry is post-tx? XXX
